--- a/index.html
+++ b/index.html
@@ -5,6 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href=".\fonts\fonts.css" />
+    <link rel="stylesheet" href=".\styles\global.css" />
+    <link rel="stylesheet" href=".\styles\style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item header_menu-item_active">
+            <a class="header__menu-link" href="#0">главная</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src=".\images\logo-black.svg"
+          alt="Логотип Оно-тебе-надо"
+        />
+      </a>
+
+      <address class="address header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </header>
+
+    <main class="content">
+      <section class="cover">
+        <h1></h1>
+        <div class="description">
+          <p></p>
+          <button></button>
+        </div>
+      </section>
+      <section class="lots">
+        <h1></h1>
+        <ul>
+          <li>
+            <a href="#0">
+              <article>
+                <img
+                  src=".\images\card-lot-01.jpg"
+                  alt="Кадр из фильма 'Лакричная пицца'"
+                />
+                <h2>Фильм режиссёра, который бросил киношколу</h2>
+                <p>
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="#0">
+              <article>
+                <img
+                  src=".\images\card-lot-02.jpg"
+                  alt="Обложка книги Джеймса Джойса 'Улисс'"
+                />
+                <h2>
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h2>
+                <p>
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="#0">
+              <article>
+                <img
+                  src=".\images\card-lot-03.jpg"
+                  alt="Картина Кандинского 'Поперечная линия'"
+                />
+                <h2>
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h2>
+                <p>
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="about"></section>
+    </main>
+
+    <footer class="footer"></footer>
+  </body>
 </html>
