--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href=".\fonts\fonts.css" />
-    <link rel="stylesheet" href=".\styles\global.css" />
-    <link rel="stylesheet" href=".\styles\style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
       <nav class="header__menu">
-        <ul class="header__menu-list">
-          <li class="header__menu-item header_menu-item_active">
-            <a class="header__menu-link" href="#0">главная</a>
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#0">главная</a>
           </li>
-          <li class="header__menu-item">
-            <a class="header__menu-link" href="#0">посмотреть лоты</a>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#lots">посмотреть лоты</a>
           </li>
-          <li class="header__menu-item">
-            <a class="header__menu-link" href="#0">об аукционе</a>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -28,7 +28,7 @@
       <a class="header__logo">
         <img
           class="header__logo-image"
-          src=".\images\logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип Оно-тебе-надо"
         />
       </a>
@@ -42,24 +42,34 @@
 
     <main class="content">
       <section class="cover">
-        <h1></h1>
-        <div class="description">
-          <p></p>
-          <button></button>
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text_left">оно</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">надо</span>
+        </h1>
+
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
+
       <section class="lots">
-        <h1></h1>
-        <ul>
-          <li>
-            <a href="#0">
-              <article>
+        <h1 id="lots" class="lots__heading">Лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_film">
                 <img
-                  src=".\images\card-lot-01.jpg"
+                  src="./images/card-lot-01.jpg"
                   alt="Кадр из фильма 'Лакричная пицца'"
                 />
-                <h2>Фильм режиссёра, который бросил киношколу</h2>
-                <p>
+                <h2 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h2>
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -67,17 +77,17 @@
               </article>
             </a>
           </li>
-          <li>
-            <a href="#0">
-              <article>
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_book">
                 <img
-                  src=".\images\card-lot-02.jpg"
+                  src="./images/card-lot-02.jpg"
                   alt="Обложка книги Джеймса Джойса 'Улисс'"
                 />
-                <h2>
+                <h2 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h2>
-                <p>
+                <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
@@ -88,17 +98,17 @@
               </article>
             </a>
           </li>
-          <li>
-            <a href="#0">
-              <article>
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_picture">
                 <img
-                  src=".\images\card-lot-03.jpg"
+                  src="./images/card-lot-03.jpg"
                   alt="Картина Кандинского 'Поперечная линия'"
                 />
-                <h2>
+                <h2 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h2>
-                <p>
+                <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
@@ -110,6 +120,7 @@
         </ul>
       </section>
       <section class="about"></section>
+      <h1 id="about">Об аукционе</h1>
     </main>
 
     <footer class="footer"></footer>
