--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <main class="content">
       <section class="cover">
+        <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text aligned-text_left">оно</span>
           <span class="aligned-text aligned-text_center">тебе</span>
@@ -57,18 +58,15 @@
       </section>
 
       <section class="lots">
-        <h1 id="lots" class="lots__heading">Лоты</h1>
+        <h2 id="lots" class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_film">
-                <img
-                  src="./images/card-lot-01.jpg"
-                  alt="Кадр из фильма 'Лакричная пицца'"
-                />
-                <h2 class="card__title">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h2>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -80,13 +78,10 @@
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_book">
-                <img
-                  src="./images/card-lot-02.jpg"
-                  alt="Обложка книги Джеймса Джойса 'Улисс'"
-                />
-                <h2 class="card__title">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h2>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -101,13 +96,10 @@
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_picture">
-                <img
-                  src="./images/card-lot-03.jpg"
-                  alt="Картина Кандинского 'Поперечная линия'"
-                />
-                <h2 class="card__title">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h2>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -118,11 +110,87 @@
             </a>
           </li>
         </ul>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
       </section>
-      <section class="about"></section>
-      <h1 id="about">Об аукционе</h1>
+
+      <section id="about" class="about">
+        <div class="about__column">
+          <div class="about__logo">
+            <img
+              src="../images/logo-white.svg"
+              alt="логотип оно-тебе-надо"
+              class="about__logo-image"
+            />
+          </div>
+        </div>
+
+        <div class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#0"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#about">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0"></a>
+          <img
+            src="../images/yt.svg"
+            alt="youtube"
+            class="footer__social-icon"
+          />
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0"></a>
+          <img src="../images/vk.svg" alt="vk" class="footer__social-icon" />
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0"></a>
+          <img
+            src="../images/pinterest.svg"
+            alt="pinterest"
+            class="footer__social-icon"
+          />
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
