--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
 
-      <a class="header__logo">
+      <a class="header__logo" href="#0">
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
@@ -117,7 +117,7 @@
         <div class="about__column">
           <div class="about__logo">
             <img
-              src="../images/logo-white.svg"
+              src="./images/logo-white.svg"
               alt="логотип оно-тебе-надо"
               class="about__logo-image"
             />
@@ -130,7 +130,7 @@
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              на один аукцион. Потому что кому нужен дневник девочки- подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
@@ -171,24 +171,27 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0"></a>
-          <img
-            src="../images/yt.svg"
-            alt="youtube"
-            class="footer__social-icon"
-          />
+          <a class="footer__social-link" href="#0">
+            <img
+              src="./images/yt.svg"
+              alt="youtube"
+              class="footer__social-icon"
+            />
+          </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0"></a>
-          <img src="../images/vk.svg" alt="vk" class="footer__social-icon" />
+          <a class="footer__social-link" href="#0">
+            <img src="./images/vk.svg" alt="vk" class="footer__social-icon" />
+          </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0"></a>
-          <img
-            src="../images/pinterest.svg"
-            alt="pinterest"
-            class="footer__social-icon"
-          />
+          <a class="footer__social-link" href="#0">
+            <img
+              src="./images/pinterest.svg"
+              alt="pinterest"
+              class="footer__social-icon"
+            />
+          </a>
         </li>
       </ul>
     </footer>
