--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
-            <p>
+            <p class="about__text-first-paragraph">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки- подростка
@@ -152,7 +152,7 @@
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
