--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#0"
-              >главная</a
-            >
+            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
@@ -181,7 +179,11 @@
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img src="./images/vk.svg" alt="vk" class="footer__social-icon" />
+            <img 
+            src="./images/vk.svg" 
+            alt="vk" 
+            class="footer__social-icon"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
