--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
 
@@ -127,7 +127,7 @@
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
-            <p class="about__text-first-paragraph">
+            <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки- подростка
@@ -169,7 +169,7 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img
               src="./images/yt.svg"
               alt="youtube"
@@ -178,7 +178,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img 
             src="./images/vk.svg" 
             alt="vk" 
@@ -187,7 +187,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img
               src="./images/pinterest.svg"
               alt="pinterest"
